# test_qa

./: README.md  pyproject.toml  pytest.ini  requirements.txt
ritm/pages/: base_page.py  check_box_page.py  elements_page.py  locators.py  main_page.py  web_driver.py
ritm/tests/: conftest.py  test_check_box.py
