[tool.poetry]
name = "ritm"
version = "0.1.0"
description = ""
authors = ["Evgeniy V. <volochek93@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.2"
selenium = "^4.18.1"
pytest-rerunfailures = "^13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
